--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ hr {
 
 
 p {
-	margin-bottom: 1.7em;
+	
 }
 	
 /* Headings */
@@ -83,8 +83,7 @@ h2, .h2{
 }
 
 h3, .h3 {
-	font-size: 0.9473em; /*18/19*/
-	text-transform: uppercase;
+	font-size: .9473em; /*18/19*/
 }
 
 h4, .h4 {
@@ -102,6 +101,40 @@ h6, .h6 {
 .kilo{ }
 .mega{ }
 .giga{ }
+
+.page-title {
+	font-family: "Source sans pro", Arial, sans-serif;
+	font-weight: 900;
+	font-size: 2.7368em;
+	letter-spacing: -.04em;
+	line-height: 1;
+	margin-bottom: .25em;
+}
+
+@media (min-width: 600px) {
+	.page-title {
+		position: absolute;
+		top: 1.5em;
+		font-size: 3.2em;
+		letter-spacing: -.06em;
+		margin-bottom: 0;
+		color: #c6870a;
+	}
+}
+
+@media (min-width: 750px) {
+	.page-title {
+		top: 1.2em;
+		font-size: 3.8em;
+	}
+}
+
+@media (min-width: 900px) {
+	.page-title {
+		top: 1.3em;
+		font-size: 3.9em;
+	}
+}
 
 .post-title {
 	font: normal 2em/1.2 "Playfair Display", Lora, Georgia, serif;
@@ -128,6 +161,10 @@ h6, .h6 {
 	}
 }
 
+.post-entry p {
+	margin-bottom: 1.7em;
+}
+
 .post-entry h2, .post-entry h3 {
 	margin-bottom: .8em;
 }
@@ -140,6 +177,10 @@ h6, .h6 {
 	.post-entry p+h2, .post-entry p+h3  {
 		margin-top: 2.1em;
 	}
+}
+
+.post-entry h3 {
+	text-transform: uppercase;
 }
 
 /* Classes */
@@ -172,48 +213,39 @@ h6, .h6 {
 	color: #ffffff;
 }
 
-.page-title {
-	font-family: "Source sans pro", Arial, sans-serif;
-	font-weight: 900;
-	font-size: 2.7368em;
-	letter-spacing: -0.04em;
-	line-height: 1;
-	margin-bottom: 0.25em;
-}
-
 /* Blockquotes */
 
-blockquote {
+.post-entry blockquote {
 	margin-bottom: 2.3em;
 }
 
 @media (min-width: 900px) {
-	blockquote {
+	.post-entry blockquote {
 		margin-bottom: 3.2em;;
 	}
 }
 
-blockquote > p {
+.post-entry blockquote > p {
 	font-size: 1.1578em;
 	line-height: 1.5;
 	font-style: italic;
 	padding-top: 1em;
-	margin-bottom: .4em;
+	margin-bottom: .4em !important;
 }
 
 @media (min-width: 600px) {
-	blockquote > p {
+	.post-entry blockquote > p {
 		font-size: 1.2631em;
 	}
 }
 
 @media (min-width: 900px) {
-	blockquote > p {
+	.post-entry blockquote > p {
 		font-size: 1.3684em;
 	}
 }
 
-blockquote:before {
+.post-entry blockquote:before {
 	display: block;
 	width: 1em;
 	content: "\201D";
@@ -226,19 +258,19 @@ blockquote:before {
 }
 
 @media (min-width: 900px) {
-	blockquote:before {
+	.post-entry blockquote:before {
 		margin-top: .5em;
 	}
 }
 
 @media (min-width: 1000px) {
-	blockquote:before {
+	.post-entry blockquote:before {
 		margin-top: .6em;
 	}
 }
 
-blockquote cite {
-	font-size: 0.8947em;
+.post-entry blockquote cite {
+	font-size: .8947em;
 	color: #636363;
 	font-style: normal;
 }
@@ -335,7 +367,7 @@ strong {
 }
 
 .page-width .page-width {
-    margin: 0 -0.684em;
+    margin: 0 -.684em;
     max-width: none;
     width: auto;
 }
@@ -343,8 +375,8 @@ strong {
 .small-1, .small-2, .small-3, .small-4, .small-5, .small-6, .small-7, .small-8, .small-9, .small-10, .small-11, .small-12, .medium-1, .medium-2, .medium-3, .medium-4, .medium-5, .medium-6, .medium-7, .medium-8, .medium-9, .medium-10, .medium-11, .medium-12, .large-1, .large-2, .large-3, .large-4, .large-5, .large-6, .large-7, .large-8, .large-9, .large-10, .large-11, .large-12 {
     float: left;
     min-height: 1px;
-    padding-right: 0.684em;
-    padding-left: 0.684em;
+    padding-right: .684em;
+    padding-left: .684em;
     width: 100%;
 }
 
@@ -725,10 +757,10 @@ a {
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
 	border-bottom-color: transparent;
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 a:hover { 
@@ -830,7 +862,7 @@ figure {
 }
 
 figcaption {
-	font-size: 0.8947em; /* 17/19 */
+	font-size: .8947em; /* 17/19 */
 	margin-top: .2em;
 	color: #cbcbcb;
 	font-style: italic;
@@ -856,6 +888,8 @@ figcaption {
 
 .list-inline > li {
   display: inline-block;
+  *display: inline;
+  zoom: 1;
   padding-right: 5px;
   padding-left: 5px;
 }
@@ -1097,7 +1131,27 @@ p {
 
 .site-head {
 	margin-top: 1.5em;
-	margin-bottom: 2.5em;
+	margin-bottom: 3em;
+}
+
+@media (min-width: 600px) {
+	.site-head {
+		margin-top: 2.5em;
+		margin-bottom: 5.5em;
+	}
+}
+
+@media (min-width: 750px) {
+	.site-head {
+		margin-bottom: 6.5em;
+	}
+}
+
+@media (min-width: 900px) {
+	.site-head {
+		margin-top: 3em;
+		margin-bottom: 7.3em;
+	}
 }
 
 .site-head-beta {
@@ -1118,7 +1172,7 @@ p {
 
 .site-logo {
 	position: relative;
-	top: 0.4318em;
+	top: .4318em;
 }
 
 .site-head-content {
@@ -1202,7 +1256,7 @@ p {
 		right: 0;
 		top: 3.5em;
 		z-index: 10;
-		padding-top: 0.5em;
+		padding-top: .5em;
 		border-top: none;
 		font-size: 1em;
 		text-align: right;
@@ -1225,7 +1279,11 @@ p {
 		*display: inline;
 		zoom: 1;
 		border-bottom: none;
-		margin-right: 0.5em;
+		margin-right: .5em;
+	}
+
+	.nav-list > li:last-child {
+		margin-right: .1em;
 	}
 }
 
@@ -1237,6 +1295,8 @@ p {
 @media (min-width: 600px) {
 	.nav-list a {
 		display: inline-block;
+		*display: inline;
+		zoom: 1;
 		color: #cbcbcb;
 	}
 }
@@ -1262,6 +1322,8 @@ p {
 @media (min-width: 600px) {
 	.expanded li {
 	   display: inline-block;
+	   *display: inline;
+		zoom: 1;
 	}
 }
 
@@ -1305,7 +1367,7 @@ p {
  }
 
 .post-pubdate {
-	font-size: 0.9473em;
+	font-size: .9473em;
 	color: #cbcbcb;
 }
 
@@ -1331,4 +1393,123 @@ p {
 }
 
 
+/* ==========================================================================
 
+   Page template
+   
+   ========================================================================== */
+
+.page {
+	margin-bottom: 2em;
+}
+
+@media (min-width: 750px) {
+	.page {
+		margin-bottom: 2.5em;
+	}
+}
+
+@media (min-width: 900px) {
+	.page {
+		margin-bottom: 4em;
+	}
+}
+
+.page-header {
+	margin-bottom: 3.5em;
+}
+
+@media (min-width: 600px) {
+	.page-header {
+		margin-bottom: 4.8em;
+	}
+}
+
+@media (min-width: 750px) {
+	.page-header {
+		margin-bottom: 5.5em;
+	}
+}
+
+@media (min-width: 900px) {
+	.page-header {
+		margin-bottom: 6em;
+	}
+}
+
+
+/* ==========================================================================
+
+   Letters page
+   
+   ========================================================================== */
+
+.archive-heading {
+	margin-bottom: 1em;
+}
+
+@media (min-width: 750px) {
+	.archive-heading {
+		margin-bottom: 1.3em;
+	}
+}
+
+.archive-list {
+	list-style: none;
+}
+
+.archive-item {
+	position: relative;
+    border-top: 1px solid #e6e6e6;
+    padding-bottom: .8em;
+    padding-top: 1.2em;
+}
+
+@media (min-width: 1000px) {
+	.archive-item {
+	    padding: 1.5em 0;
+	}
+}
+
+.archive-item > time {
+	font-size: .8947em;
+	color: #cbcbcb;
+}
+
+@media (min-width: 1000px) {
+	.archive-item > time {
+		position: absolute;
+		top: 1.5em;
+		right: 0;
+	}
+}
+
+.archive-item-title, .archive-item-snippet {
+    margin-bottom: .25em;
+}
+
+.archive-item-title {
+	font-size: 1.105em;
+    font-weight: 400;
+}
+
+@media (min-width: 1000px) {
+	.archive-item-title {
+		margin-bottom: .4em;
+	}
+}
+
+@media (min-width: 1000px) {
+	.archive-item-snippet {
+		margin-bottom: 0;
+	}
+}
+
+.archive-item-snippet, .archive-item-snippet > a {
+    color: #636363;
+    line-height: 1.4;
+}
+
+.archive-item-snippet > a {
+	border-bottom-width: 0;
+}
