--- a/css/style.css
+++ b/css/style.css
@@ -161,20 +161,20 @@ h6, .h6 {
 	}
 }
 
-.post-entry p {
+.post-entry p, .bio-entry p {
 	margin-bottom: 1.7em;
 }
 
-.post-entry h2, .post-entry h3 {
+.post-entry h2, .post-entry h3, .bio-entry h2 {
 	margin-bottom: .8em;
 }
 
-.post-entry p+h2, .post-entry p+h3  {
+.post-entry p+h2, .post-entry p+h3, .bio-entry p+h2  {
 	margin-top: 2em;
 }
 
 @media (min-width: 600px) {
-	.post-entry p+h2, .post-entry p+h3  {
+	.post-entry p+h2, .post-entry p+h3, .bio-entry p+h2  {
 		margin-top: 2.1em;
 	}
 }
@@ -372,7 +372,7 @@ strong {
     width: auto;
 }
 
-.small-1, .small-2, .small-3, .small-4, .small-5, .small-6, .small-7, .small-8, .small-9, .small-10, .small-11, .small-12, .medium-1, .medium-2, .medium-3, .medium-4, .medium-5, .medium-6, .medium-7, .medium-8, .medium-9, .medium-10, .medium-11, .medium-12, .large-1, .large-2, .large-3, .large-4, .large-5, .large-6, .large-7, .large-8, .large-9, .large-10, .large-11, .large-12 {
+.small-1, .small-2, .small-3, .small-4, .small-5, .small-6, .small-7, .small-8, .small-9, .small-10, .small-11, .small-12, .medium-1, .medium-2, .medium-3, .medium-4, .medium-5, .medium-6, .medium-7, .medium-8, .medium-9, .medium-10, .medium-11, .medium-12, .large-1, .large-2, .large-3, .large-4, .large-5, .large-6, .large-7, .large-8, .large-9, .large-10, .large-11, .large-12, .xlarge-1, .xlarge-2, .xlarge-3, .xlarge-4, .xlarge-5, .xlarge-6, .xlarge-7, .xlarge-8, .xlarge-9, .xlarge-10, .xlarge-11, .xlarge-12 {
     float: left;
     min-height: 1px;
     padding-right: .684em;
@@ -720,6 +720,122 @@ strong {
 	/* Centering columns */
 
 	.large-centered {
+	    float: none;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
+}
+
+@media (min-width: 1200px) {
+	.xlarge-1{
+	    width: 8.3333333333333333%;
+	}
+
+	.xlarge-2 {
+	    width: 16.6666666666666667%;
+	}
+
+	.xlarge-3 {
+	    width: 25%;
+	}
+
+	.xlarge-4 {
+	    width: 33.3333333333333333%;
+	}
+
+	.xlarge-5 {
+	    width: 41.6666666666666667%;
+	}
+
+	.xlarge-6 {
+	    width: 50%;
+	}
+
+	.xlarge-7 {
+	    width: 58.3333333333333333%;
+	}
+
+	.xlarge-8 {
+	    width: 66.6666666666666667%;
+	}
+
+	.xlarge-9 {
+	    width: 75%;
+	}
+
+	.xlarge-10 {
+	    width: 83.3333333333333333%;
+	}
+
+	.xlarge-11 {
+	    width: 91.6666666666666667%;
+	}
+
+	.xlarge-12 {
+	    width: 100%;
+	}
+
+	/* Offeset margins */
+
+	.xlarge-offset-0 {
+	    margin-left: 0;
+	}
+
+	.xlarge-offset-1 {
+	    margin-left: 8.3333333333333333%;
+	}
+
+	.xlarge-offset-2 {
+	    margin-left: 16.6666666666666667%;
+	}
+
+	.xlarge-offset-3 {
+	    margin-left: 25%;
+	}
+
+	.xlarge-offset-4 {
+	    margin-left: 33.3333333333333333%;
+	}
+
+	.xlarge-offset-5 {
+	    margin-left: 41.6666666666666667%;
+	}
+
+	.xlarge-offset-6  {
+	    margin-left: 50%;
+	}
+
+	/* Pull margins */
+
+	.xlarge-pull-1 {
+		margin-left: -8.3333333333333333%;
+	}
+
+	.xlarge-pull-2 {
+	    margin-left: -16.6666666666666667%;
+	}
+
+	.xlarge-pull-3 {
+	    margin-left: -25%;
+	}
+
+	/* Push margins */
+
+	.xlarge-push-1 {
+		margin-right: -8.3333333333333333%;
+	}
+
+	.xlarge-push-2 {
+	    margin-right: -16.6666666666666667%;
+	}
+
+	.xlarge-push-3 {
+	    margin-right: -25%;
+	}
+
+	/* Centering columns */
+
+	.xlarge-centered {
 	    float: none;
 	    margin-left: auto;
 	    margin-right: auto;
@@ -1437,6 +1553,17 @@ p {
 	}
 }
 
+.bio .page-header {
+	text-align: center;
+	margin-bottom: 1.8em;
+}
+
+@media (min-width: 600px) {
+	.bio .page-header {
+		margin-bottom: 0;
+	}
+}
+
 
 /* ==========================================================================
 
@@ -1567,3 +1694,118 @@ p {
 	line-height: 1.3;
 	color: #cbcbcb;
 }
+
+/* ==========================================================================
+
+   Bio page
+   
+   ========================================================================== */
+
+@media (min-width: 500px) {
+	.bio-bg-img {
+		background: url(../img/bio-lines.png) no-repeat 10% -10%;
+	}
+}
+
+@media (min-width: 900px) {
+	.bio-bg-img {
+		background-position: -20% -20%;
+	}
+}
+
+@media (min-width: 600px) {
+	.bio {
+		margin-top: -1.2em;
+	}
+}
+
+@media (min-width: 900px) {
+	.bio {
+		margin-top: 10em;
+	}
+}
+
+.bio-header {
+	position: relative;
+	margin-bottom: 2.5em;
+}
+
+@media (min-width: 600px) {
+	.bio-header {
+		margin-bottom: 3em;
+	}
+}
+
+.bio-img {
+	margin-bottom: 1.1em;
+	border-radius: 50%;
+}
+
+@media (min-width: 750px) {
+	.bio-img {
+		float: left;
+	}
+}
+
+@media (min-width: 900px) {
+	.bio-img {
+		float: none;
+	}
+}
+
+@media (min-width: 750px) {
+	.bio-meta {
+		float: right;
+		text-align: left;
+		position: absolute;
+		top: 40%;
+		left: 40%;
+
+	}
+}
+
+@media (min-width: 900px) {
+	.bio-meta {
+		float: none;
+		text-align: center;
+		position: static;
+	}
+}
+
+.bio-name, .bio-occupation {
+	text-transform: uppercase;
+	font-weight: normal;
+	letter-spacing: 3px;
+}
+
+@media (min-width: 750px) {
+	.bio-name, .bio-occupation {
+		background: #fff;
+		background: rgba(255, 255, 255, .8);
+		padding: .1em 0 0 .4em;
+	}
+}
+
+@media (min-width: 900px) {
+	.bio-name, .bio-occupation {
+		background: none;
+		padding: 0;
+	}
+}
+
+.bio-name {
+	font-size: 1.0526em;
+}
+
+@media (min-width: 350px) {
+	.bio-name {
+		font-size: 1.1578em;
+	}
+}
+
+.bio-occupation {
+	font-size: .8421em;
+	color: #c6870a;
+	margin-top: .2em;
+}
+
