--- a/css/style.css
+++ b/css/style.css
@@ -1455,7 +1455,7 @@ p {
 	font-weight: 400;
 }
 
-.portfolio-item-desc {
+.portfolio-item-tags {
 	font-size: 0.8421em;
 	line-height: 1.3;
 	color: #cbcbcb;
