Replace site.url to site.baseurl in paths to img/css/js files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,8 @@
 	<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
 
 	<!-- CSS-->
-	<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/reset.css" />
-	<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
 	
 	<!-- Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -37,9 +37,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	
 	<!-- Scripts-->
-	<script src="{{ site.url }}/js/lib/jquery-1.10.2.min.js"></script>
-	<script src="{{ site.url }}/js/responsive-nav.js"></script>
-	<script src="{{ site.url }}/js/jquery.fitvids.js"></script>
+	<script src="{{ site.baseurl }}/js/lib/jquery-1.10.2.min.js"></script>
+	<script src="{{ site.baseurl }}/js/responsive-nav.js"></script>
+	<script src="{{ site.baseurl }}/js/jquery.fitvids.js"></script>
 	<!--Emulates CSS3 pseudo-classes and attribute selectors in Internet Explorer 6-8-->
 	<!--[if (gte IE 6)&(lte IE 9)]>
 	<script type="text/javascript" src="js/lib/selectivizr-min.js"></script>
@@ -58,10 +58,10 @@
 	<![endif]--> 
 
 	<!-- Favicon and Apple touch icons -->
-	<link rel="shortcut icon" href="{{ site.url }}/images/favicons/favicon.ico">
-	<link rel="apple-touch-icon" href="{{ site.url }}/images/favicons/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}/images/favicons/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.url }}/images/favicons/apple-touch-icon-114x114.png">
+	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
+	<link rel="apple-touch-icon" href="{{ site.baseurl }}/images/favicons/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-114x114.png">
 
 </head>
 <body> 
