--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -3,7 +3,7 @@
 		<div class="medium-10 large-8 medium-centered">
 			<a href="/">
 				<div class="post-footer-content">
-					<img src="{{ site.url }}/img/icons/mailbox.jpg" alt="Paskatkaste">
+					<img src="{{ site.baseurl }}/img/icons/mailbox.jpg" alt="Paskatkaste">
 				</div> <!-- ooter content -->
 			</a>
 		</div>
