--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,5 +1,5 @@
 			<header class="post-header">
-				<img class="post-cover" src="{{ site.url }}/img/posts/{{ page.feature-image }}" alt="{{ page.title }}">
+				<img class="post-cover" src="{{ site.baseurl }}/img/posts/{{ page.feature-image }}" alt="{{ page.title }}">
 				<h1 class="post-title">{{ page.title }}</h1>
 				<time class="post-pubdate" pubdate="" datetime="{{ page.date | date: "%Y-%m-%d" }}">
 				{% assign m = page.date | date: "%-m" %}
