Add {{ site.baseurl }} to img/a tags

--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,7 +1,7 @@
 <footer class="post-footer">
 	<div class="page-width">
 		<div class="medium-10 large-8 medium-centered">
-			<a href="/">
+			<a href="{{ site.baseurl }}">
 				<div class="post-footer-content">
 					<img src="{{ site.baseurl }}/img/icons/mailbox.jpg" alt="Paskatkaste">
 				</div> <!-- ooter content -->
