--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,7 +6,7 @@
 		<div class="page-width">
 			<div class="small-12">
 				<div class="site-head-content cfix">
-					<a href="/" class="site-logo" title="Atgriezties galvenajā lapā">
+					<a href="{ site.baseurl }" class="site-logo" title="Atgriezties galvenajā lapā">
 						<img src="{{ site.baseurl }}/img/martins-logo.jpg" alt="Mārtiņš Mihailovs" class="martins-logo">
 					</a>
 					<nav class="nav-primary">
