--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,20 @@ iframe {
 	vertical-align: bottom;
 }
 
+.video-wrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
+}
+
+.video-wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* ==========================================================================
 
    Lists
