--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ iframe {
 	/* Push margins */
 
 	.xlarge-push-1 {
-		margin-right: -8.3333333333333333%;
+		margin-right: -8.334%; /* Changed value in favour of % rounding for Chrome. Was -8.3333333333333333%; */
 	}
 
 	.xlarge-push-2 {
